# SDL-OpenGL-Boilerplate

./: .gitignore  CMakeLists.txt  main.cpp
code/engine/headers/: Application.h  IApplicationEventHandler.h  Image.h  MainEventHandler.h
code/engine/src/: Application.cpp  Image.cpp  MainEventHandler.cpp
